--- a/Savio/StatView/SAStatViewController.xib
+++ b/Savio/StatView/SAStatViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -122,27 +122,39 @@
                                         <constraint firstAttribute="height" constant="44" id="3QJ-ev-S18"/>
                                     </constraints>
                                     <state key="normal" image="stats-achievement-holder.png"/>
+                                    <connections>
+                                        <action selector="clickedOnAchivements:" destination="-1" eventType="touchUpInside" id="ZzI-i5-fy4"/>
+                                    </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4c-aY-q9A">
+                                <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4c-aY-q9A">
                                     <rect key="frame" x="310" y="5" width="120" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="jX6-Se-3hT"/>
                                     </constraints>
                                     <state key="normal" image="stats-achievement-holder.png"/>
+                                    <connections>
+                                        <action selector="clickedOnAchivements:" destination="-1" eventType="touchUpInside" id="7ju-yg-iyE"/>
+                                    </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYk-Go-Dvl">
+                                <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYk-Go-Dvl">
                                     <rect key="frame" x="450" y="5" width="120" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="Rqs-Ed-QX9"/>
                                     </constraints>
                                     <state key="normal" image="stats-achievement-holder.png"/>
+                                    <connections>
+                                        <action selector="clickedOnAchivements:" destination="-1" eventType="touchUpInside" id="oat-78-j4I"/>
+                                    </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPD-Gf-Sh1">
+                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPD-Gf-Sh1">
                                     <rect key="frame" x="170" y="5" width="120" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="zLB-db-94l"/>
                                     </constraints>
                                     <state key="normal" image="stats-achievement-holder.png"/>
+                                    <connections>
+                                        <action selector="clickedOnAchivements:" destination="-1" eventType="touchUpInside" id="Wob-9u-ea9"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <constraints>
