--- a/Savio/StatView/SocialSharingView.xib
+++ b/Savio/StatView/SocialSharingView.xib
@@ -61,11 +61,13 @@
                             </variation>
                         </label>
                         <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMi-9w-Io8">
-                            <rect key="frame" x="548" y="0.0" width="22" height="22"/>
+                            <rect key="frame" x="538" y="10" width="22" height="22"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="22" id="hDJ-hq-b8k"/>
                                 <constraint firstAttribute="width" constant="22" id="jKE-M4-vgE"/>
                             </constraints>
+                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <state key="normal" image="social-pop-up-close.png">
                                 <color key="titleColor" red="1" green="0.64705882349999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
@@ -86,49 +88,53 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TfT-4Z-lF0">
                                     <rect key="frame" x="0.0" y="31" width="570" height="52"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Djw-0y-MsM">
-                                            <rect key="frame" x="11" y="5" width="122" height="44"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="44" id="j5c-sn-fkH"/>
-                                            </constraints>
-                                            <state key="normal" image="social-fb.png"/>
-                                        </button>
                                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCq-s7-AcI">
-                                            <rect key="frame" x="295" y="5" width="122" height="44"/>
+                                            <rect key="frame" x="289" y="5" width="133" height="44"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="44" id="LD1-JH-nkv"/>
+                                                <constraint firstAttribute="height" constant="44" id="VVi-hX-cXi"/>
                                             </constraints>
                                             <state key="normal" image="social-g+.png"/>
                                         </button>
                                         <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iVZ-AA-pfv">
-                                            <rect key="frame" x="437" y="5" width="122" height="44"/>
+                                            <rect key="frame" x="430" y="5" width="132" height="44"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="44" id="cbi-qq-eV4"/>
+                                                <constraint firstAttribute="height" constant="44" id="rJe-qk-aKp"/>
                                             </constraints>
                                             <state key="normal" image="social-wa.png"/>
                                         </button>
-                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ab-bZ-7Lr">
-                                            <rect key="frame" x="153" y="5" width="122" height="44"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Djw-0y-MsM">
+                                            <rect key="frame" x="8" y="5" width="133" height="44"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="122" id="qlj-KO-FOO"/>
-                                                <constraint firstAttribute="height" constant="44" id="suS-oa-JQt"/>
+                                                <constraint firstAttribute="height" constant="44" id="9rh-gl-fgH"/>
+                                            </constraints>
+                                            <state key="normal" image="social-fb.png"/>
+                                        </button>
+                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ab-bZ-7Lr">
+                                            <rect key="frame" x="149" y="5" width="132" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="8RV-cn-aaO"/>
                                             </constraints>
                                             <state key="normal" image="social-tr.png"/>
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="baseline" secondItem="Djw-0y-MsM" secondAttribute="baseline" id="790-Gy-ry9"/>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="leading" secondItem="TfT-4Z-lF0" secondAttribute="leading" constant="153" id="9mS-T1-iX8"/>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="top" secondItem="TfT-4Z-lF0" secondAttribute="top" constant="5" id="AFe-FI-8ed"/>
-                                        <constraint firstItem="iVZ-AA-pfv" firstAttribute="leading" secondItem="jCq-s7-AcI" secondAttribute="trailing" constant="20" id="Cd1-nv-0jX"/>
-                                        <constraint firstItem="jCq-s7-AcI" firstAttribute="leading" secondItem="2Ab-bZ-7Lr" secondAttribute="trailing" constant="20" id="ETR-vy-aD0"/>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="width" secondItem="Djw-0y-MsM" secondAttribute="width" id="Exa-t9-1Nf"/>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="baseline" secondItem="iVZ-AA-pfv" secondAttribute="baseline" id="Tzb-du-Q6V"/>
+                                        <constraint firstItem="iVZ-AA-pfv" firstAttribute="leading" secondItem="jCq-s7-AcI" secondAttribute="trailing" constant="8" id="6sz-TV-Rpt"/>
+                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="top" secondItem="TfT-4Z-lF0" secondAttribute="top" constant="5" id="Ac7-5J-fn9"/>
+                                        <constraint firstItem="Djw-0y-MsM" firstAttribute="top" secondItem="TfT-4Z-lF0" secondAttribute="top" constant="5" id="DnT-e0-dk5"/>
+                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="width" secondItem="Djw-0y-MsM" secondAttribute="width" id="DwM-Br-wxN"/>
+                                        <constraint firstAttribute="bottom" secondItem="Djw-0y-MsM" secondAttribute="bottom" constant="3" id="Gnr-si-fyn"/>
+                                        <constraint firstItem="iVZ-AA-pfv" firstAttribute="top" secondItem="TfT-4Z-lF0" secondAttribute="top" constant="5" id="J7i-oT-oey"/>
+                                        <constraint firstAttribute="bottom" secondItem="2Ab-bZ-7Lr" secondAttribute="bottom" constant="3" id="OAy-fb-008"/>
+                                        <constraint firstAttribute="bottom" secondItem="jCq-s7-AcI" secondAttribute="bottom" constant="3" id="SG7-tM-R4h"/>
                                         <constraint firstAttribute="height" constant="52" id="WKn-N0-dLs"/>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="leading" secondItem="Djw-0y-MsM" secondAttribute="trailing" constant="20" id="e9i-Ip-T1l"/>
-                                        <constraint firstItem="iVZ-AA-pfv" firstAttribute="width" secondItem="Djw-0y-MsM" secondAttribute="width" id="fDH-zJ-1E7"/>
-                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="baseline" secondItem="jCq-s7-AcI" secondAttribute="baseline" id="ju5-kh-rGl"/>
-                                        <constraint firstItem="jCq-s7-AcI" firstAttribute="width" secondItem="Djw-0y-MsM" secondAttribute="width" id="r7g-Wl-FBm"/>
+                                        <constraint firstItem="Djw-0y-MsM" firstAttribute="leading" secondItem="TfT-4Z-lF0" secondAttribute="leading" constant="8" id="Zmz-6c-I96"/>
+                                        <constraint firstItem="jCq-s7-AcI" firstAttribute="width" secondItem="Djw-0y-MsM" secondAttribute="width" id="hBU-LZ-eNh"/>
+                                        <constraint firstAttribute="trailing" secondItem="iVZ-AA-pfv" secondAttribute="trailing" constant="8" id="hOD-dm-RCG"/>
+                                        <constraint firstItem="2Ab-bZ-7Lr" firstAttribute="leading" secondItem="Djw-0y-MsM" secondAttribute="trailing" constant="8" id="qyd-U1-wQp"/>
+                                        <constraint firstItem="jCq-s7-AcI" firstAttribute="leading" secondItem="2Ab-bZ-7Lr" secondAttribute="trailing" constant="8" id="sMV-VV-nrd"/>
+                                        <constraint firstItem="iVZ-AA-pfv" firstAttribute="width" secondItem="Djw-0y-MsM" secondAttribute="width" id="uxO-qt-uOi"/>
+                                        <constraint firstAttribute="bottom" secondItem="iVZ-AA-pfv" secondAttribute="bottom" constant="3" id="vqi-4E-Fh8"/>
+                                        <constraint firstItem="jCq-s7-AcI" firstAttribute="top" secondItem="TfT-4Z-lF0" secondAttribute="top" constant="5" id="zdt-Wj-f1P"/>
                                     </constraints>
                                 </view>
                             </subviews>
@@ -153,13 +159,13 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="0MA-GK-FIR" secondAttribute="bottom" id="0Y5-Q1-5wm"/>
-                        <constraint firstAttribute="trailing" secondItem="vMi-9w-Io8" secondAttribute="trailing" id="5ek-d8-5I9"/>
+                        <constraint firstAttribute="trailing" secondItem="vMi-9w-Io8" secondAttribute="trailing" constant="10" id="5ek-d8-5I9"/>
                         <constraint firstItem="h32-KW-UwL" firstAttribute="top" secondItem="tq7-V3-DLg" secondAttribute="bottom" constant="20" id="5mJ-WA-OLT"/>
                         <constraint firstItem="0MA-GK-FIR" firstAttribute="top" secondItem="cLg-cM-xJo" secondAttribute="top" constant="420" id="8jw-ll-oXc"/>
                         <constraint firstItem="tq7-V3-DLg" firstAttribute="top" secondItem="cLg-cM-xJo" secondAttribute="top" constant="30" id="9P6-WA-riC"/>
                         <constraint firstAttribute="trailing" secondItem="0MA-GK-FIR" secondAttribute="trailing" id="BWD-sd-UXd"/>
                         <constraint firstItem="tq7-V3-DLg" firstAttribute="centerX" secondItem="cLg-cM-xJo" secondAttribute="centerX" id="FEU-Pf-9bo"/>
-                        <constraint firstItem="vMi-9w-Io8" firstAttribute="top" secondItem="cLg-cM-xJo" secondAttribute="top" id="Icv-Q5-Ovf"/>
+                        <constraint firstItem="vMi-9w-Io8" firstAttribute="top" secondItem="cLg-cM-xJo" secondAttribute="top" constant="10" id="Icv-Q5-Ovf"/>
                         <constraint firstAttribute="bottom" secondItem="0MA-GK-FIR" secondAttribute="bottom" id="YfJ-ZD-G9v"/>
                         <constraint firstItem="0MA-GK-FIR" firstAttribute="leading" secondItem="cLg-cM-xJo" secondAttribute="leading" id="gLW-Jf-Xno"/>
                         <constraint firstItem="h32-KW-UwL" firstAttribute="centerX" secondItem="cLg-cM-xJo" secondAttribute="centerX" id="mtA-uX-lK1"/>
